<resources>
    <string name="app_name">Rudder</string>
    <string name="id_placeholder">ID</string>
    <string name="password_placeholder">Password</string>
    <string name="password_confirm_placeholder">PASSWORD Check</string>
    <string name="recommend_code">RECOMMENDATION CODE (Optional)</string>
    <string name="email_id">EMAIL ID</string>
    <string name="email_domain">Ex) univsersity.ac.uk</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">log in</string>
    <string name="sumbit">SUBMIT</string>
    <string name="verify_code">Verification Code</string>
    <string name="verify_capital">VERIFY</string>
    <string name="id_check">CHECK</string>
    <string name="login_error">Wrong Password! Please try again </string>
    <string name="community_title">Community</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="nickname">NICKNAME</string>
    <string name="introduce">Introduce Yourself! (Optional)</string>
    <string name="university_selection">University Selection</string>
    <string name="university_select">Select Your University</string>
    <string name="next">NEXT</string>
    <string name="create_account">Create Account</string>
    <string name="remeber_me">Remember me?</string>
    <string name="forgot_password">Forgot ID/Password?</string>
    <string name="comment_title">Comment</string>
    <string name="add_comment_hint">Add a Comment</string>
    <string name="add_post_title">Add Post</string>
    <string name="add_title">Add</string>
    <string name="post_button">Post</string>
    <string name="text_title">Text</string>
    <string name="text_hint">Text</string>
    <string name="email_address">UNIVERSITY EMAIL</string>
    <string name="logout">Logout</string>
    <string name="Report">Report</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="block_user">Block User</string>
    <string name="comment_send_text">Reply</string>
    <string name="edit_post_title">Edit Post</string>
    <string name="category">Category</string>
    <string name="apply">Apply</string>
    <string name="edit_nickname">Change Nickname</string>
    <string name="report_comment_content">Please help us understand whats going on. (Offensive content, Privacy concerns, etc.,)</string>
    <string name="report_post_content">Please help us understand whats going on. (Offensive content, Privacy concerns, etc.,)</string>
    <string name="choose_profile_image">Choose Profile Image</string>
    <string name="category_select">Category Selection</string>
    <string name="auto_login_error">Please type your ID and Password.</string>
    <string name="my_page_title">My Page</string>
    <string name="club">Society</string>
    <string name="nickname_hint">New Nickname</string>
    <string name="edit_profile_image">Change Character</string>
    <string name="send_post_message">Send Quick Mail</string>
    <string name="post_message">Quick Mail</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="reply">Reply</string>
    <string name="notification">Notification</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="my_post">My Post</string>
    <string name="my_comment">My Comment</string>
    <string name="alert_title">Alert</string>
    <string name="find_id">FIND ID</string>
    <string name="find_password">FIND PASSWORD</string>
    <string name="nickname_title">Nickname</string>
    <string name="category_title">Category</string>
    <string name="character_title">Character</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="request">Request</string>
    <string name="join_club">Join Society</string>
    <string name="request_category">Request Category</string>
    <string name="choose_department">Choose Department</string>
    <string name="send">Send</string>
    <string name="setting_title">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jobs_title">Jobs</string>
    <string name="jobs_details">Jobs Details</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="university_email">University Email</string>


</resources>