<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_outline_article_24"
        android:title="@string/community_title" />

    <item
        android:id="@+id/navigation_postmessage"
        android:icon="@drawable/ic_outline_email_24"
        android:title="@string/post_message" />

<!--    <item-->
<!--        android:id="@+id/navigation_notification"-->
<!--        android:icon="@drawable/ic_baseline_notifications_none_24"-->
<!--        android:title="@string/notification" />-->

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_outline_person_outline_24"
        android:title="@string/my_page_title" />

</menu>