<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_display_navigation_graph"
    app:startDestination="@id/navigation_community"
    >

    <bottom
        android:id="@+id/navigation_community"
        android:name="com.rudder.ui.fragment.community.CommunityDisplayFragment"
        android:label="@string/community_title"
        tools:layout="@layout/fragment_community_display" >
        <action
            android:id="@+id/action_navigation_community_to_main_fragment_navigation_graph"
            app:destination="@id/main_fragment_navigation_graph"
            app:popUpTo="@id/navigation_community" />

        <action
            android:id="@+id/action_navigation_community_to_navigation_add_post"
            app:destination="@id/navigation_add_post"
            app:popUpTo="@id/navigation_community"
            />

        <action
            android:id="@+id/action_navigation_community_to_navigation_show_post"
            app:destination="@id/navigation_show_post"
            app:popUpTo="@id/navigation_community"
            />

    </bottom>

    <bottom
        android:id="@+id/navigation_postmessage"
        android:name="com.rudder.ui.fragment.postmessage.PostMessageDisplayFragment"
        android:label="@string/post_message"
        tools:layout="@layout/fragment_post_message_display" />

    <bottom
        android:id="@+id/navigation_mypage"
        android:name="com.rudder.ui.fragment.mypage.MyPageDisplayFragment"
        android:label="@string/my_page_title"
        tools:layout="@layout/fragment_my_page_display" >
        <action
            android:id="@+id/action_navigation_mypage_to_navigation_category_select_my_page"
            app:destination="@id/navigation_category_select_my_page"
            app:popUpTo="@id/navigation_mypage" />
    </bottom>


    <navigation
        android:id="@+id/main_fragment_navigation_graph"
        app:startDestination="@id/navigation_search"
        >
        <bottom
            android:id="@+id/navigation_search"
            android:name="com.rudder.ui.fragment.search.SearchPostDisplayFragment"
            android:label="SearchPostDisplayFragment"
            tools:layout="@layout/fragment_search_post_display"
            />

    </navigation>

    <bottom
        android:id="@+id/navigation_add_post"
        android:name="com.rudder.ui.fragment.post.AddPostDisplayFragment"
        android:label="AddPostDisplayFragment"
        tools:layout="@layout/fragment_add_post_display"
        />


    <bottom
        android:id="@+id/navigation_show_post"
        android:name="com.rudder.ui.fragment.post.ShowPostDisplayFragment"
        android:label="ShowPostDisplayFragment"
        tools:layout="@layout/fragment_show_post_display"
        />


    <bottom
        android:id="@+id/navigation_category_select_my_page"
        android:name="com.rudder.ui.fragment.mypage.CategorySelectMyPageFragment"
        android:label="ShowPostDisplayFragment"
        tools:layout="@layout/fragment_my_page_category_select"
        />


</navigation>