<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="sendPostMessageDialogVM"
            type="com.rudder.viewModel.SendPostMessageDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_radius">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendPostMessageDialogCL"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/sendPostMessageDialogTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_post_message"
                android:fontFamily="@font/sf_pro_text_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.03" />



            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/post_message"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:text="@={sendPostMessageDialogVM._postMessageBody}"
                android:theme="@style/MyEditTextTheme"
                android:maxLength="180"
                android:gravity="top|left"
                android:background="@drawable/edge"
                android:textSize="14sp"


                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9"

                android:id="@+id/sendPostMessageDialogBodyEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                >
            </EditText>


            <Button
                android:id="@+id/sendMessageDialogButton"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="12sp"
                android:fontFamily="@font/sf_pro_text_bold"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.12"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.3"
                android:clickable="true"
                android:gravity="center"
                android:background="@drawable/button_enabled"
                android:onClick="@{()->sendPostMessageDialogVM.sendPostMessage()}"
                android:text="@string/sumbit"
                android:textStyle="bold"

                app:layout_constraintTop_toBottomOf="@+id/sendPostMessageDialogBodyEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
